<resources>
    <string name="app_name">Blaze</string>
    <string name="notes">NOTES</string>
    <string name="title">TITLE</string>
    <string name="type_your_text_here">Type your text here</string>
    <string name="calendar">CALENDAR</string>
    <string name="factor">FACTOR</string>
    <string name="petersb">Petersb</string>
    <string name="perm_city">Perm city</string>
    <string name="_1">1</string>
    <string name="_3_2">3.2</string>
    <string name="ekatburg">Ekatburg</string>
    <string name="mosc_city">Mosc city</string>
    <string name="_1_3">1.3</string>
    <string name="_2_2">2.2</string>
    <string name="_3_1">3.1</string>
    <string name="_2_3">2.3</string>
    <string name="_2_1">2.1</string>
    <string name="_2">2</string>
    <string name="x">X</string>
    <string name="favourites">FAVOURITES</string>
    <string name="chelyab">CHELYAB</string>
    <string name="statistics">STATISTICS</string>
    <string name="blaze">BLAZE</string>
    <string name="afl_europe_championship">AFL Europe Championship</string>
    <string name="euro_cup">Euro Cup</string>
    <string name="mls">MLS</string>
    <string name="premier_league">Premier League</string>
    <string name="bundesliga">Bundesliga</string>
    <string name="uefa_europa_league">UEFA Europa League</string>
    <string name="la_liga">La Liga</string>
    <string name="english_football_league">English Football League</string>
    <string name="league">LEAGUE</string>
    <string name="uefa_champions_league">UEFA Champions League</string>
    <string name="add_a_note">ADD A NOTE</string>
    <string name="teams">TEAMS</string>
    <string name="almeria">Almeria</string>
    <string name="bologna">Bologna</string>
    <string name="empoli">Empoli</string>
    <string name="osasuna">Osasuna</string>
    <string name="manchester_city">Manchester city</string>
    <string name="chelsea">Chelsea</string>
    <string name="victories">VICTORIES</string>
    <string name="textview">TextView</string>
</resources>