<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.football_completed.FootballCompletedFragment">


    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:fontFamily="@font/gotham_pro"
        android:text="@string/petersb"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/btnPetersb"
        app:layout_constraintStart_toStartOf="@+id/btnPetersb"
        app:layout_constraintTop_toBottomOf="@+id/btnPetersb" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/gotham_pro"
        android:text="@string/ekatburg"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView56"
        app:layout_constraintStart_toStartOf="@+id/imageView57"
        app:layout_constraintTop_toBottomOf="@+id/imageView57" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/gotham_pro"
        android:text="@string/chelyab"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView56"
        app:layout_constraintStart_toStartOf="@+id/imageView57"
        app:layout_constraintTop_toBottomOf="@+id/imageView56" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:fontFamily="@font/gotham_pro"
        android:text="@string/mosc_city"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView59"
        app:layout_constraintStart_toStartOf="@+id/imageView59"
        app:layout_constraintTop_toBottomOf="@+id/btnPetersb" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/gotham_pro"
        android:text="@string/perm_city"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView60"
        app:layout_constraintStart_toStartOf="@+id/imageView60"
        app:layout_constraintTop_toBottomOf="@+id/imageView60" />

    <ImageView
        android:id="@+id/imageView56"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:src="@drawable/icon_chelyab"
        app:layout_constraintEnd_toEndOf="@+id/imageView57"
        app:layout_constraintStart_toStartOf="@+id/imageView57"
        app:layout_constraintTop_toBottomOf="@+id/imageView57" />

    <ImageView
        android:id="@+id/imageView57"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:src="@drawable/icon_ekatburg"
        app:layout_constraintEnd_toStartOf="@+id/imageView60"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPetersb" />

    <ImageView
        android:id="@+id/imageView59"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_mosk_city"
        app:layout_constraintBottom_toBottomOf="@+id/btnPetersb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnPetersb"
        app:layout_constraintTop_toTopOf="@+id/btnPetersb" />

    <ImageView
        android:id="@+id/imageView60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_perm_city"
        app:layout_constraintBottom_toBottomOf="@+id/imageView57"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView57" />

    <ImageView
        android:id="@+id/btnPetersb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:src="@drawable/icon_petersb"
        app:layout_constraintEnd_toStartOf="@+id/imageView59"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>